--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,4 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say hello
-        run: echo Hello
+        run: echo ${{ github.event.client_payload }}
+      - name: Say hello2
+        run: echo ${{ github.event.client_payload.app }}
