--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say hello
-        run: echo ${{ github.event.client_payload }}
-      - name: Say hello2
-        run: echo ${{ github.event.client_payload.app }}
+        run: 'echo "${{ github.event.client_payload.app }}"'
+      - run: 'echo "payload: ${{ toJson(github.event.client_payload) }}"'
