--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -31,6 +31,8 @@ jobs:
     - name: running script
       run: |
         envsubst < merge-smoke-tests.tf.template
+        mv merge-smoke-tests.tf.template merge-smoke-tests.tf
+        cat merge-smoke-tests.tf
       env:
         GITHUB_USERNAME: ${{ inputs.github_username }}
         GITHUB_TOKEN: ${{ inputs.github_token }}
@@ -38,5 +40,6 @@ jobs:
         SSH_KEYS: ${{ inputs.tags }}
         TAGS: ${{ inputs.ssh_keys }}
         FIREWALL_IPS: ${{ inputs.firewall_ips }}
+        REGION: "us-southeast"
         
  
