--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -28,6 +28,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: running script
       run: |
         envsubst < merge-smoke-tests.tf.template
