--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -34,8 +34,7 @@ jobs:
       run: |
         python3 --version
         python --version
-        envsubst < merge-smoke-tests.tf.template
-        mv merge-smoke-tests.tf.template merge-smoke-tests.tf
+        envsubst < merge-smoke-tests.tf.template > merge-smoke-tests.tf
         cat merge-smoke-tests.tf
       env:
         GITHUB_USERNAME: ${{ inputs.github_username }}
