--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -32,8 +32,8 @@ jobs:
       uses: actions/checkout@v3
     - name: running script
       run: |
-        echo '::add-mask::${{ inputs.github_username }}' > x.txt
-        cat x.txt
+        VAR=$(echo "::add-mask::$GITHUB_USERNAME")
+        echo $VAR
       env:
         GITHUB_USERNAME: ${{ inputs.github_username || 'xx' }}
         GITHUB_TOKEN: ${{ inputs.github_token }}
