--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -32,7 +32,8 @@ jobs:
       uses: actions/checkout@v3
     - name: running script
       run: |
-        VAR=$(echo "::add-mask::$GITHUB_USERNAME")
+        echo "::add-mask::${{ inputs.github_token }}"
+        export VAR=$(echo "::add-mask::$GITHUB_USERNAME")
         echo $VAR
       env:
         GITHUB_USERNAME: ${{ inputs.github_username || 'xx' }}
